# wasmtiny

./: .gitignore  AGENTS.md  Cargo.toml  README.md
core/iwasm/aot/: iwasm_aot.cmake
core/rust-wamr/: CMakeLists.txt  Cargo.toml
core/rust-wamr/.cargo/: config.toml
core/rust-wamr/c_api/: Cargo.toml
core/rust-wamr/src/: lib.rs
core/rust-wamr/src/aot_runtime/: mod.rs  runtime.rs
core/rust-wamr/src/c_api/: bindings.rs
core/rust-wamr/src/interpreter/: instructions.rs  interpreter.rs  mod.rs  stack.rs
core/rust-wamr/src/jit/: compiler.rs  mod.rs  runtime.rs
core/rust-wamr/src/loader/: mod.rs  reader.rs  streaming.rs
core/rust-wamr/src/memory/: mod.rs
core/rust-wamr/src/runtime/: export.rs  instance.rs  mod.rs  module.rs  values.rs
openspec/changes/archive/2026-03-23-port-aot-runtime/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-rewrite-wamr-in-rust/: proposal.md  tasks.md
openspec/changes/archive/2026-03-24-implement-fast-jit/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-implement-llvm-jit/: design.md  proposal.md
openspec/changes/archive/2026-03-24-port-integration-tests-to-rust/: design.md  tasks.md
openspec/changes/archive/2026-03-24-wasm-jit-osr/: tasks.md
openspec/changes/archive/2026-03-25-add-runtime-safepoints/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-add-metering-and-limits/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-add-shared-memory-regions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-add-snapshot-restore/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-29-implement-wasm-threads/: design.md  tasks.md
openspec/changes/archive/2026-03-29-migrate-spec-tests/: design.md  proposal.md  tasks.md
openspec/changes/implement-llvm-jit/: tasks.md
openspec/changes/implement-wasm-memory64/: design.md  proposal.md  tasks.md
openspec/changes/implement-wasm-memory64/specs/wasm-memory64-aot/: spec.md
openspec/changes/implement-wasm-memory64/specs/wasm-memory64-interpreter/: spec.md
openspec/changes/implement-wasm-memory64/specs/wasm-memory64-jit/: spec.md
openspec/changes/implement-wasm-simd/: design.md  proposal.md  tasks.md
openspec/changes/implement-wasm-threads/: proposal.md  tasks.md
openspec/changes/migrate-spec-tests/: tasks.md
openspec/changes/migrate-to-rust-examples/: design.md  proposal.md  tasks.md
openspec/changes/port-aot-runtime/: tasks.md
openspec/changes/port-integration-tests-to-rust/: proposal.md  tasks.md
openspec/changes/rewrite-wamr-documentation/: design.md  proposal.md  tasks.md
openspec/changes/rewrite-wamr-in-rust/: design.md  tasks.md
openspec/changes/wasm-jit-osr/: design.md  proposal.md  tasks.md
openspec/specs/instance-limits/: spec.md
openspec/specs/runtime-metering/: spec.md
openspec/specs/shared-memory-regions/: spec.md
openspec/specs/wasm-atomics-jit/: spec.md
openspec/specs/wasm-interpreter/: spec.md
openspec/specs/wasm-module-loader/: spec.md
openspec/specs/wasm-runtime-core/: spec.md
src/: application.rs  lib.rs  main.rs  memory.rs
src/aot_runtime/: loader.rs  mod.rs  runtime.rs
src/application/: app.rs  mod.rs
src/interpreter/: exec.rs  fast.rs  instructions.rs  interpreter.rs  mod.rs  stack.rs
src/jit/: compiler.rs  emitter.rs  llvm_backend.rs  llvm_runtime.rs  mod.rs  regalloc.rs  runtime.rs  wasm_to_llvm.rs
src/loader/: mod.rs  parser.rs  reader.rs  streaming.rs  validator.rs
src/memory/: mod.rs
src/runtime/: error.rs  export.rs  import.rs  instance.rs  metering.rs  mod.rs  module.rs  shared_memory.rs  snapshot.rs  suspend.rs  types.rs  values.rs
src/tests/: integration.rs  mod.rs
tests/: malformed.rs  regression.rs  spec.rs
tests/spec/: Cargo.toml
tests/spec/src/: lib.rs
tests/standalone/: Cargo.toml  standalone.sh
tests/standalone/src/: lib.rs
tests/wamr-test-suites/: test_wamr.sh
(+29 files in other folders)
