[package]
name = "wasmtiny"
version = "0.1.0"
edition = "2024"
description = "Tiny Rust WebAssembly runtime based on WAMR"
repository = "https://github.com/seliumlabs/wasmtiny"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.6", features = ["derive"] }
leb128 = "0.2"
memchr = "2.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
